--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #209cee;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.radio-buttons{
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 225px;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 12px; 
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.filtre{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 4px;
+  background-color: white;
+  width: 225px;
+  height: 250px;
+  padding: 20px 10px;
+  margin-top: 30px;
+  font-size: 12px; 
+}
+h1,h2{
+  text-align: center;
 }
